--- a/src/components/Filter/FilterStyles.module.css
+++ b/src/components/Filter/FilterStyles.module.css
@@ -1,3 +1,15 @@
 .container {
   padding: 20px;
 }
+.label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+.input {
+  display: block;
+  margin-bottom: 20px;
+  padding: 5px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
