--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,11 @@ button:focus {
   outline: none;
   box-shadow: 0 0 5px rgba(26, 82, 118, 0.7);
 }
+
+input {
+  display: block;
+  margin-bottom: 20px;
+  padding: 5px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
